--- a/src/components/airdrop/Airdrop.css
+++ b/src/components/airdrop/Airdrop.css
@@ -1,467 +1,473 @@
 .main {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
-	flex-direction: column;
-	overflow: hidden;
-	min-height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  overflow: hidden;
+  min-height: 100%;
 }
 .benefits {
-	padding: 80px 0;
+  padding: 80px 0;
 }
 .autoContainer {
-	max-width: 1360px;
-	margin: 0 auto;
-	padding: 0 50px;
-	line-height: 1.1;
+  max-width: 1360px;
+  margin: 0 auto;
+  padding: 0 50px;
+  line-height: 1.1;
 }
 .benefits__inner {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-pack: justify;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 .benefits__item {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
-	flex-direction: column;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-	font-size: 20px;
-	gap: 1em;
-	padding: 1.5em;
-	width: calc(50% - 20px);
-	text-align: center;
-	/* background: url(../images/shapes/claimShape.png); */
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-size: 20px;
+  gap: 1em;
+  padding: 1.5em;
+  width: calc(50% - 20px);
+  text-align: center;
+  /* background: url(../images/shapes/claimShape.png); */
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 .benefits__item-logo {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	width: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100px;
 }
 .text--primary {
-	color: #acf10e;
+  color: #acf10e;
 }
 p._xlg {
-	font-size: 22px;
+  font-size: 22px;
 }
 
 .benefits__item-progress {
-	position: relative;
-	width: 95%;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-pack: justify;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
-	color: #6b6b6b;
-	font-size: 16px;
-	padding-bottom: 1em;
-	top: 200px;
+  position: relative;
+  width: 95%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  color: #6b6b6b;
+  font-size: 16px;
+  padding-bottom: 1em;
+  top: 200px;
+}
+.color_bar {
+  background: linear-gradient(90deg, #baff00 25%, #06ffcc 75%);
+}
+.top_mag {
+  margin-top: 200px;
 }
 .benefits__item-progress:after {
-	position: absolute;
-	content: '';
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 0.5em;
-	background: linear-gradient(90deg, #baff00 25%, #06ffcc 75%);
-	border-radius: 1em;
-	opacity: 0.1;
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0.5em;
+  background: linear-gradient(90deg, #baff00 25%, #06ffcc 75%);
+  border-radius: 1em;
+  opacity: 0.1;
 }
 
 .benefits__item-footer {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-	-ms-flex-wrap: wrap;
-	flex-wrap: wrap;
-	margin-top: 10px;
-	gap: 10px;
-	margin-top: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-top: 10px;
+  gap: 10px;
+  margin-top: auto;
 }
 .button {
-	font-size: 16px;
+  font-size: 16px;
 }
 
 .button--primary {
-	background: -webkit-gradient(
-		linear,
-		left top,
-		right top,
-		color-stop(25%, #baff00),
-		color-stop(75%, #06ffcc)
-	);
-	background: linear-gradient(90deg, #baff00 25%, #06ffcc 75%);
-	background-size: 140% 100%;
-	background-position: 50%;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    color-stop(25%, #baff00),
+    color-stop(75%, #06ffcc)
+  );
+  background: linear-gradient(90deg, #baff00 25%, #06ffcc 75%);
+  background-size: 140% 100%;
+  background-position: 50%;
 }
 
 .hero .autoContainer {
-	max-width: 1500px;
+  max-width: 1500px;
 }
 
 .introduction .autoContainer {
-	max-width: 1220px;
+  max-width: 1220px;
 }
 @media (max-width: 1280px) {
-	.productsItem__content {
-		padding-top: 10px;
-	}
+  .productsItem__content {
+    padding-top: 10px;
+  }
 }
 @media (max-width: 1160px) {
-	.autoContainer {
-		padding: 0 40px;
-	}
-	h1 {
-		font-size: 65px;
-	}
-	h2 {
-		font-size: 50px;
-	}
-	h3 {
-		font-size: 30px;
-	}
-	h4 {
-		font-size: 25px;
-	}
-	p {
-		font-size: 16px;
-	}
-	p._sm {
-		font-size: 14px;
-	}
-	p._lg {
-		font-size: 18px;
-	}
-	p._xlg {
-		font-size: 22px;
-	}
-	.products__inner h2 {
-		margin-bottom: 45px;
-	}
-	.productsItem {
-		-webkit-box-align: center;
-		-ms-flex-align: center;
-		align-items: center;
-	}
-	.productsItem__content {
-		padding-top: 0;
-	}
-	.productsItem p {
-		line-height: 24px;
-	}
+  .autoContainer {
+    padding: 0 40px;
+  }
+  h1 {
+    font-size: 65px;
+  }
+  h2 {
+    font-size: 50px;
+  }
+  h3 {
+    font-size: 30px;
+  }
+  h4 {
+    font-size: 25px;
+  }
+  p {
+    font-size: 16px;
+  }
+  p._sm {
+    font-size: 14px;
+  }
+  p._lg {
+    font-size: 18px;
+  }
+  p._xlg {
+    font-size: 22px;
+  }
+  .products__inner h2 {
+    margin-bottom: 45px;
+  }
+  .productsItem {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .productsItem__content {
+    padding-top: 0;
+  }
+  .productsItem p {
+    line-height: 24px;
+  }
 }
 @media (max-width: 1025px) {
-	.autoContainer {
-		padding: 0 30px;
-	}
-	.header {
-		padding: 25px 0;
-	}
-	.header__inner {
-		-webkit-box-pack: justify;
-		-ms-flex-pack: justify;
-		justify-content: space-between;
-	}
-	.header__inner-logo {
-		padding-right: 20px;
-		border-right: 2px solid rgba(255, 255, 255, 0.27);
-		border: 0;
-	}
-	.header__inner .burger {
-		display: block;
-		z-index: 2;
-	}
-	.nav {
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background: rgba(16, 16, 16, 0.4);
-		-webkit-backdrop-filter: blur(4px);
-		backdrop-filter: blur(4px);
-		z-index: 0;
-		-webkit-transform: translate(100%);
-		transform: translate(100%);
-		opacity: 0;
-		pointer-events: none;
-		-webkit-transition: all 0s ease 0.25s, opacity 0.2s ease-in-out 0s;
-		transition: all 0s ease 0.25s, opacity 0.2s ease-in-out 0s;
-	}
-	.nav__inner {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 35%;
-		min-width: 280px;
-		height: 100%;
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-		-ms-flex-direction: column;
-		flex-direction: column;
-		-webkit-box-align: start;
-		-ms-flex-align: start;
-		align-items: flex-start;
-		-webkit-box-pack: start;
-		-ms-flex-pack: start;
-		justify-content: flex-start;
-		-webkit-box-sizing: border-box;
-		box-sizing: border-box;
-		background: #fff;
-		-webkit-box-shadow: 0px 4px 24px -1px rgba(16, 16, 16, 0.2);
-		box-shadow: 0px 4px 24px -1px rgba(16, 16, 16, 0.2);
-		padding: 50px 25px;
-		-webkit-transform: translate(-100%);
-		transform: translate(-100%);
-		opacity: 0;
-		-webkit-transition: 0.15s ease-in-out 0s;
-		transition: 0.15s ease-in-out 0s;
-	}
-	.nav__inner-group {
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-		-ms-flex-direction: column;
-		flex-direction: column;
-		-webkit-box-align: start;
-		-ms-flex-align: start;
-		align-items: flex-start;
-		padding: 25px 0;
-		gap: 8px;
-		color: #101010;
-		border-top: 1px solid #fff;
-		width: 100%;
-	}
-	.nav__inner-group:first-child {
-		border: 0;
-	}
-	.nav__inner-link {
-		color: #101010;
-	}
-	.nav__inner-link:after {
-		left: 0;
-		top: 50%;
-		width: 2px;
-		height: 80%;
-		-webkit-transform: translateY(-50%);
-		transform: translateY(-50%);
-	}
-	.nav__inner-link:hover {
-		color: #2f5bd1;
-	}
-	.nav__inner-link:hover:after {
-		width: 2px;
-		height: 100%;
-	}
-	.nav.active {
-		pointer-events: all;
-		-webkit-transform: translate(0);
-		transform: translate(0);
-		opacity: 1;
-		-webkit-transition: opacity 0.3s ease-in-out;
-		transition: opacity 0.3s ease-in-out;
-	}
-	.nav.active .nav__inner {
-		opacity: 1;
-		-webkit-transition: 0.3s ease-in-out 0.05s;
-		transition: 0.3s ease-in-out 0.05s;
-		-webkit-transform: translate(0);
-		transform: translate(0);
-	}
-	.products__inner h2 {
-		margin-bottom: 35px;
-	}
-	.productsItem__content {
-		max-width: unset;
-	}
-	.productsItem__content-info {
-		margin-bottom: 25px;
-	}
-	.productsItem ul {
-		gap: 10px;
-	}
+  .autoContainer {
+    padding: 0 30px;
+  }
+  .header {
+    padding: 25px 0;
+  }
+  .header__inner {
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+  }
+  .header__inner-logo {
+    padding-right: 20px;
+    border-right: 2px solid rgba(255, 255, 255, 0.27);
+    border: 0;
+  }
+  .header__inner .burger {
+    display: block;
+    z-index: 2;
+  }
+  .nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(16, 16, 16, 0.4);
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);
+    z-index: 0;
+    -webkit-transform: translate(100%);
+    transform: translate(100%);
+    opacity: 0;
+    pointer-events: none;
+    -webkit-transition: all 0s ease 0.25s, opacity 0.2s ease-in-out 0s;
+    transition: all 0s ease 0.25s, opacity 0.2s ease-in-out 0s;
+  }
+  .nav__inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 35%;
+    min-width: 280px;
+    height: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    background: #fff;
+    -webkit-box-shadow: 0px 4px 24px -1px rgba(16, 16, 16, 0.2);
+    box-shadow: 0px 4px 24px -1px rgba(16, 16, 16, 0.2);
+    padding: 50px 25px;
+    -webkit-transform: translate(-100%);
+    transform: translate(-100%);
+    opacity: 0;
+    -webkit-transition: 0.15s ease-in-out 0s;
+    transition: 0.15s ease-in-out 0s;
+  }
+  .nav__inner-group {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    padding: 25px 0;
+    gap: 8px;
+    color: #101010;
+    border-top: 1px solid #fff;
+    width: 100%;
+  }
+  .nav__inner-group:first-child {
+    border: 0;
+  }
+  .nav__inner-link {
+    color: #101010;
+  }
+  .nav__inner-link:after {
+    left: 0;
+    top: 50%;
+    width: 2px;
+    height: 80%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+  .nav__inner-link:hover {
+    color: #2f5bd1;
+  }
+  .nav__inner-link:hover:after {
+    width: 2px;
+    height: 100%;
+  }
+  .nav.active {
+    pointer-events: all;
+    -webkit-transform: translate(0);
+    transform: translate(0);
+    opacity: 1;
+    -webkit-transition: opacity 0.3s ease-in-out;
+    transition: opacity 0.3s ease-in-out;
+  }
+  .nav.active .nav__inner {
+    opacity: 1;
+    -webkit-transition: 0.3s ease-in-out 0.05s;
+    transition: 0.3s ease-in-out 0.05s;
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+  .products__inner h2 {
+    margin-bottom: 35px;
+  }
+  .productsItem__content {
+    max-width: unset;
+  }
+  .productsItem__content-info {
+    margin-bottom: 25px;
+  }
+  .productsItem ul {
+    gap: 10px;
+  }
 }
 @media (max-width: 940px) {
-	.autoContainer {
-		padding: 0 25px;
-	}
-	.products__inner {
-		width: 100%;
-		max-width: 850px;
-	}
-	.productsItem {
-		-ms-flex-wrap: wrap;
-		flex-wrap: wrap;
-		gap: 30px;
-	}
-	.productsItem__image {
-		-webkit-box-ordinal-group: 0;
-		-ms-flex-order: -1;
-		order: -1;
-		width: 100%;
-	}
-	.productsItem__content {
-		width: 100%;
-	}
-	h1 {
-		font-size: 55px;
-	}
-	h2 {
-		font-size: 40px;
-	}
-	h3 {
-		font-size: 27px;
-	}
-	h4 {
-		font-size: 23px;
-	}
+  .autoContainer {
+    padding: 0 25px;
+  }
+  .products__inner {
+    width: 100%;
+    max-width: 850px;
+  }
+  .productsItem {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .productsItem__image {
+    -webkit-box-ordinal-group: 0;
+    -ms-flex-order: -1;
+    order: -1;
+    width: 100%;
+  }
+  .productsItem__content {
+    width: 100%;
+  }
+  h1 {
+    font-size: 55px;
+  }
+  h2 {
+    font-size: 40px;
+  }
+  h3 {
+    font-size: 27px;
+  }
+  h4 {
+    font-size: 23px;
+  }
 }
 @media (max-width: 768px) {
-	.autoContainer {
-		padding: 0 15px;
-	}
+  .autoContainer {
+    padding: 0 15px;
+  }
 }
 @media (max-width: 580px) {
-	._hideMob {
-		display: none;
-	}
-	.button {
-		font-size: 16px;
-	}
-	.button--border span {
-		width: 12px;
-		height: 14px;
-	}
-	.productsItem {
-		gap: 20px;
-		padding: 15px 15px 20px;
-	}
-	.productsItem__content-info {
-		gap: 5px;
-	}
-	.productsItem__content-row {
-		gap: 10px;
-	}
-	.productsItem ul {
-		gap: 5px;
-	}
-	.productsItem li {
-		padding-left: 14px;
-	}
-	.productsItem li::before {
-		top: 10px;
-		width: 4px;
-		height: 4px;
-		left: 0;
-	}
+  ._hideMob {
+    display: none;
+  }
+  .button {
+    font-size: 16px;
+  }
+  .button--border span {
+    width: 12px;
+    height: 14px;
+  }
+  .productsItem {
+    gap: 20px;
+    padding: 15px 15px 20px;
+  }
+  .productsItem__content-info {
+    gap: 5px;
+  }
+  .productsItem__content-row {
+    gap: 10px;
+  }
+  .productsItem ul {
+    gap: 5px;
+  }
+  .productsItem li {
+    padding-left: 14px;
+  }
+  .productsItem li::before {
+    top: 10px;
+    width: 4px;
+    height: 4px;
+    left: 0;
+  }
 }
 @media (max-width: 460px) {
-	h1 {
-		font-size: 40px;
-	}
-	h2 {
-		font-size: 30px;
-	}
-	h3 {
-		font-size: 25px;
-	}
-	h4 {
-		font-size: 20px;
-	}
-	p {
-		font-size: 14px;
-	}
-	p._sm {
-		font-size: 12px;
-	}
-	p._lg {
-		font-size: 16px;
-	}
-	p._xlg {
-		font-size: 20px;
-	}
-	.button {
-		font-size: 14px;
-	}
-	.products__inner-items {
-		gap: 25px;
-	}
-	.products__inner h2 {
-		margin-bottom: 30px;
-	}
-	.productsItem li {
-		font-size: 14px;
-		line-height: 20px;
-	}
-	.productsItem p {
-		line-height: 20px;
-	}
+  h1 {
+    font-size: 40px;
+  }
+  h2 {
+    font-size: 30px;
+  }
+  h3 {
+    font-size: 25px;
+  }
+  h4 {
+    font-size: 20px;
+  }
+  p {
+    font-size: 14px;
+  }
+  p._sm {
+    font-size: 12px;
+  }
+  p._lg {
+    font-size: 16px;
+  }
+  p._xlg {
+    font-size: 20px;
+  }
+  .button {
+    font-size: 14px;
+  }
+  .products__inner-items {
+    gap: 25px;
+  }
+  .products__inner h2 {
+    margin-bottom: 30px;
+  }
+  .productsItem li {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .productsItem p {
+    line-height: 20px;
+  }
 }
 @media (max-width: 370px) {
-	.productsItem__content-row {
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-		-ms-flex-direction: column;
-		flex-direction: column;
-	}
-	.productsItem__content .button {
-		width: 100%;
-	}
+  .productsItem__content-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .productsItem__content .button {
+    width: 100%;
+  }
 }
 
 .header-text {
-	line-height: 1.3; /* Adjust the space between lines by modifying this value */
+  line-height: 1.3; /* Adjust the space between lines by modifying this value */
 }
 .invite-friend-button {
-	position: relative;
+  position: relative;
 }
 
 .popUp {
-	position: absolute;
-	bottom: 100%; /* Change the position to be above the button */
-	left: 50%;
-	transform: translateX(-50%);
-	padding: 5px 10px;
-	background-color: #333;
-	color: black;
-	border-radius: 5px;
-	display: none;
-	background-color: #baff00;
-	width: 120px; /* adjust this value to your desired width */
-	text-align: center;
-	margin-bottom: 10px; /* Add some space between the tooltip and the button */
+  position: absolute;
+  bottom: 100%; /* Change the position to be above the button */
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 5px 10px;
+  background-color: #333;
+  color: black;
+  border-radius: 5px;
+  display: none;
+  background-color: #baff00;
+  width: 120px; /* adjust this value to your desired width */
+  text-align: center;
+  margin-bottom: 10px; /* Add some space between the tooltip and the button */
 }
 
 .popUp:after {
-	/* Add an arrow pointing to the button */
-	content: '';
-	position: absolute;
-	top: 100%;
-	left: 50%;
-	margin-left: -5px;
-	border-width: 5px;
-	border-style: solid;
-	border-color: #baff00 transparent transparent transparent;
+  /* Add an arrow pointing to the button */
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #baff00 transparent transparent transparent;
 }
 .popUp.visible {
-	display: block;
+  display: block;
 }
